FIX and ADD : TEST API and checkpassword
I added new tests for API code verification and password updates. I fixed the password quality check

--- a/androidApp/src/main/res/layout/activity_update_password.xml
+++ b/androidApp/src/main/res/layout/activity_update_password.xml
@@ -24,7 +24,6 @@
         android:id="@+id/logo_mail"
         android:layout_width="147dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="36dp"
         android:padding="8dp"
         android:src="@drawable/ic_baseline_mail_outline_24"
         app:layout_constraintBottom_toTopOf="@+id/t1"
@@ -49,15 +48,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="65dp"
-        android:layout_marginLeft="65dp"
         android:layout_marginEnd="65dp"
-        android:layout_marginRight="65dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="8dp"
         android:text="Mettre à jour votre mot de passe."
         android:textColor="@color/dark_green"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/t2"
+        app:layout_constraintBottom_toTopOf="@+id/textView_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_mail" />
@@ -67,24 +64,21 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="29dp"
         android:text="Veuillez introduire un nouveau mot de passe"
         android:textColor="@color/dark_green"
         app:layout_constraintBottom_toTopOf="@+id/button_check_password1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_email" />
 
     <TextView
         android:id="@+id/t3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginBottom="34dp"
         android:text="Confirmation du nouveau mot de passe"
         android:textColor="@color/dark_green"
         app:layout_constraintBottom_toTopOf="@+id/button_check_password2"
@@ -96,10 +90,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="67dp"
-        android:layout_marginLeft="67dp"
         android:layout_marginTop="7dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginRight="67dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="3dp"
         android:background="@drawable/rounded_edittext"
         android:drawableStart="@drawable/ic_baseline_lock_24"
@@ -107,8 +99,8 @@
         android:ems="10"
         android:inputType="textPassword"
         android:maxLength="20"
-        app:layout_constraintBottom_toBottomOf="@+id/button_check_password1"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_password_1"
+        app:layout_constraintEnd_toStartOf="@+id/button_check_password1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t2" />
 
@@ -118,90 +110,75 @@
         android:layout_width="0dp"
         android:layout_height="51dp"
         android:layout_marginStart="65dp"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginRight="65dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="39dp"
         android:background="@drawable/rounded_edittext"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:ems="10"
         android:inputType="textPassword"
         android:maxLength="20"
         app:layout_constraintBottom_toBottomOf="@+id/checkBox_password_2"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_check_password2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/t3" />
 
     <TextView
         android:id="@+id/textView_email"
         android:layout_width="193dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="78dp"
-        android:layout_marginRight="78dp"
-        android:layout_marginBottom="52dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginEnd="94dp"
+        android:layout_marginBottom="8dp"
         android:text=""
         android:textColor="@color/darkGreen"
-        app:layout_constraintBottom_toBottomOf="@+id/t1"
-        app:layout_constraintEnd_toEndOf="@+id/bouton_retour"
-        app:layout_constraintStart_toStartOf="@+id/t1"
-        app:layout_constraintTop_toBottomOf="@+id/bouton_retour" />
+        app:layout_constraintBottom_toTopOf="@+id/t2"
+        app:layout_constraintEnd_toEndOf="@+id/button_check_password1"
+        app:layout_constraintStart_toStartOf="@+id/logo_mail"
+        app:layout_constraintTop_toBottomOf="@+id/t1" />
 
     <CheckBox
         android:id="@+id/checkBox_password_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
-        android:layout_marginEnd="134dp"
-        android:layout_marginRight="134dp"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="37dp"
         android:text="Voir mot de passe"
         app:layout_constraintBottom_toTopOf="@+id/t3"
-        app:layout_constraintEnd_toStartOf="@+id/button_check_password1"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/new_mpd"
         app:layout_constraintTop_toBottomOf="@+id/button_check_password1" />
 
     <CheckBox
         android:id="@+id/checkBox_password_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginRight="135dp"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="110dp"
         android:text="Voir mot de passe"
         app:layout_constraintBottom_toTopOf="@+id/submit"
-        app:layout_constraintEnd_toStartOf="@+id/button_check_password2"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/confirm_new_mdp"
         app:layout_constraintTop_toBottomOf="@+id/button_check_password2" />
 
     <Button
         android:id="@+id/button_check_password1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="51dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
         android:background="@drawable/ic_baseline_check_24"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_password_1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_password_1"
+        app:layout_constraintStart_toEndOf="@+id/new_mpd"
         app:layout_constraintTop_toBottomOf="@+id/t2" />
 
     <Button
         android:id="@+id/button_check_password2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="54dp"
+        android:layout_height="44dp"
         android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
         android:background="@drawable/ic_baseline_check_24"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_password_2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_password_2"
+        app:layout_constraintStart_toEndOf="@+id/confirm_new_mdp"
         app:layout_constraintTop_toBottomOf="@+id/t3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
