ADD END 2 END test
tests are in androidTest folder and are named TestUi. You can run it and use Appium in order to test.

--- a/androidApp/src/main/res/layout/activity_barcode_reader.xml
+++ b/androidApp/src/main/res/layout/activity_barcode_reader.xml
@@ -31,9 +31,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_return_scan">
+        app:layout_constraintTop_toBottomOf="@+id/button_return_scan"/>
 
-    </androidx.camera.view.PreviewView>
 
     <ImageView
         android:layout_width="250dp"
