ADD : pull to refresh action
With this commit, the user will be able to refresh the product page list by pulling from the top. This commit also prepares the same action fore the home page (to get the most recent information about the different product location (temp, humidity, ...))

--- a/androidApp/src/main/res/layout/fragment_home.xml
+++ b/androidApp/src/main/res/layout/fragment_home.xml
@@ -1,47 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swiperefresh"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <Button
-        android:id="@+id/fragment_button"
-        android:layout_width="350dp"
-        android:layout_height="65dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/home_first_button"
-        android:textSize="20sp"
-        android:textColor="@color/really_dark_green"
-        android:background="@drawable/home_page_button"
-        android:textAllCaps="false"
-        />
-
-    <Button
-        android:id="@+id/scan_button"
-        android:layout_width="350dp"
-        android:layout_height="65dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/scanner_un_code_bar"
-        android:textSize="20sp"
-        android:textColor="@color/really_dark_green"
-        android:background="@drawable/home_page_button"
-        android:textAllCaps="false"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/vertical_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/default_top_margin">
+    <LinearLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_margin="20dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <Button
+            android:id="@+id/fragment_button"
+            android:layout_width="350dp"
+            android:layout_height="65dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="@string/home_first_button"
+            android:textSize="20sp"
+            android:textColor="@color/really_dark_green"
+            android:background="@drawable/home_page_button"
+            android:textAllCaps="false"
+            />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/scan_button"
+            android:layout_width="350dp"
+            android:layout_height="65dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/scanner_un_code_bar"
+            android:textSize="20sp"
+            android:textColor="@color/really_dark_green"
+            android:background="@drawable/home_page_button"
+            android:textAllCaps="false"
+            />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/vertical_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_margin="20dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
